<resources>
    <string name="app_name">CM</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_code">Code</string>
    <string name="hint_new_password">New Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_delete">DELETE ACCOUNT</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_set_reminder">SET REMINDER</string>
    <string name="btn_add_fav">ADD FAVORITE</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_forgot_password">Forgot Password? Reset Now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_setting">PROFILE</string>
    <string name="btn_dashboard">HOME</string>
    <string name="btn_search">SEARCH COURSES</string>
    <string name="prefix_reminder_title">Reminder for course: </string>
</resources>
