<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RL01">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/input_register_bg"
                android:textSize="24dp" />

            <Button
                android:layout_alignParentRight="true"
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dip"
                android:background="@color/input_register_bg"
                android:text="@string/btn_logout"
                android:textAllCaps="false"
                android:textColor="@color/btn_logut_bg"
                android:textSize="15sp"
                android:padding="0dp"/>

            <Button
                android:id="@+id/btnDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/input_register_bg"
                android:text="@string/btn_dashboard"
                android:textAllCaps="false"
                android:textColor="@color/input_login_hint"
                android:textSize="15sp"
                android:padding="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@+id/btnLogout"
                android:layout_toStartOf="@+id/btnLogout" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RL01"
            android:orientation="vertical"
            android:layout_marginTop="30dp">


            <TextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                />

            <EditText
                android:id="@+id/fname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/newpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <!-- Update Button -->

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/input_register_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/btn_update"
                android:textColor="@color/white" />

            <!-- Update Button -->

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#a00000"
                android:text="@string/btn_delete"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
